--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Eat Safe Chicago</title>
@@ -13,24 +14,27 @@
   
     <div class="bgimg w3-display-container w3-text-black">
       <div class="w3-display-middle w3-jumbo">
+        <br>
+        <br>
+        <br>
         <p>eat.safe</p>
       </div>
       <div class="w3-display-topleft w3-container w3-xlarge">
         <p><a onclick="document.getElementById('restaurants').style.display='block'" class="w3-button w3-black" href="quiz.erb" >quiz</a></p>
         <p><a onclick="document.getElementById('resources').style.display='block'" class="w3-button w3-black" href="resources.erb">resources</a></p>
       </div>
-      <div class="w3-display-bottomleft w3-container">
-        <p class="w3-xlarge">enjoy chicago's food, allergen and worry free</p>
-        <p class="w3-large">created by Meredith, Rowa, and Ananya</p>
-        
+      <div class="">
+      
       </div>
     </div>
     
+    
+    
      <!--Quiz Page -->
-    <div id="restaurants" <a href="quiz.html">Quiz</a>>
+    <div id="restaurants">
       <div class="w3-modal-content w3-animate-zoom">
         <div class="w3-container w3-black w3-display-container">
-          <a href="quiz.erb"<span onclick="document.getElementById('quiz').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+          <a href="quiz.erb"<span onclick="document.getElementById('quiz').style.display='none'" class="w3-button w3-display-topright w3-large"></span>
         </div>
       </div>
     </div>
@@ -39,12 +43,31 @@
     <div id="resources" class="w3-modal">
       <div class="w3-modal-content w3-animate-zoom">
         <div class="w3-container w3-black">
-          <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-          <h1>Contact</h1>
-       
+          <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large"></span>
+        </div>
       </div>
     </div>
-    
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+     <footer><center><p>enjoy chicago's food, allergen and worry free</p><br><p>created by Meredith, Rowa, and Ananya</p></center></footer>
+   
   </body>
 </html>
