--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,73 +1,50 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Eat Safe Chicago</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="/style.css">
-  </head>
+<head>
+<title>Eat Safe Chicago</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+</head>
 
 
-  <body>
+<body>
+
+<div>
+  <div>
+    <h1>eat.safe</h1>
+    
+  <!--  <div id="alert">-->
+  <!--   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> -->
+  <!--Click here to take our quiz!-->
+  <!--    <a href='/quiz.erb' class="button"> <button class="quizbutton">Quiz</button> </a>-->
+  <!--  </div>-->
+
+    </div>
+  <div>
+    <p><a href="/quiz" >quiz</a></p>
+    <p><a href="/resources">resources</a></p>
+  </div>
+ 
+  <br><br><br>
   
-    <div class="bgimg w3-display-container w3-text-black">
-      <div class="w3-display-middle w3-jumbo">
-        <br>
-        <br>
-        <br>
-        <p>eat.safe</p>
-      </div>
-      <div class="w3-display-topleft w3-container w3-xlarge">
-        <p><a onclick="document.getElementById('restaurants').style.display='block'" class="w3-button w3-black" href="quiz.erb" >quiz</a></p>
-        <p><a onclick="document.getElementById('resources').style.display='block'" class="w3-button w3-black" href="resources.erb">resources</a></p>
-      </div>
-      <div class="">
-      
-      </div>
-    </div>
-    
-    
-    
-     <!--Quiz Page -->
-    <div id="restaurants">
-      <div class="w3-modal-content w3-animate-zoom">
-        <div class="w3-container w3-black w3-display-container">
-          <a href="quiz.erb"<span onclick="document.getElementById('quiz').style.display='none'" class="w3-button w3-display-topright w3-large"></span>
-        </div>
-      </div>
-    </div>
-    
-     <!--Resource Page -->
-    <div id="resources" class="w3-modal">
-      <div class="w3-modal-content w3-animate-zoom">
-        <div class="w3-container w3-black">
-          <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large"></span>
-        </div>
-      </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-     <footer><center><p>enjoy chicago's food, allergen and worry free</p><br><p>created by Meredith, Rowa, and Ananya</p></center></footer>
+  
+  <div class="alert">
+    <strong>Click here to take our quiz!</strong> 
+    <a href='/quiz' class="button"> <button class="quizbutton">Quiz</button> </a>
+  </div>
+  
+  <div>
+    <p>enjoy chicago's food, allergen and worry free</p>
+    <p>created by Meredith, Rowa, and Ananya</p>
+  </div>
+</div>
    
-  </body>
+  </div>
+</div>
+
+</body>
+
 </html>
