--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -8,10 +8,8 @@
     <body class="quiz">
       
       <div class "header"><header>
-        <a href="/index.erb" class="logo">Eat.Safe.Chicago</a>
         <div class="header-right">
-          <a class="active"href="/index.erb">Home</a>
-          <a href="/quiz.erb">Allergy Quiz</a>
+          <a class="active"href="/">Home</a>
         </div></header>
       </div>
         
