--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,14 +7,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="/style.css">
 </head>
 
 
-<body>
+<body class="background" background="https://wallpapershome.com/images/wallpapers/texture-4500x3000-4k-5k-wallpaper-8k-wood-background-6199.jpg">
+  
+  <br>
+  <br>
+  <div>
+    <p class="button"><a href="/quiz" >quiz</a></p>
+    <p class="button"><a href="/resources">resources</a></p>
+  </div>
 
 <div>
   <div>
-    <h1>eat.safe</h1>
+    <div>
+      <center><h1 id="homepagename">eat.safe</h1></center>
+    </div>
     
   <!--  <div id="alert">-->
   <!--   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> -->
@@ -23,20 +33,15 @@
   <!--  </div>-->
 
     </div>
-  <div>
-    <p><a href="/quiz" >quiz</a></p>
-    <p><a href="/resources">resources</a></p>
-  </div>
- 
   <br><br><br>
   
+
+  <br>
+  <br>
+  <br>
+  <br>
   
-  <div class="alert">
-    <strong>Click here to take our quiz!</strong> 
-    <a href='/quiz' class="button"> <button class="quizbutton">Quiz</button> </a>
-  </div>
-  
-  <div>
+  <div class="boxone">
     <p>enjoy chicago's food, allergen and worry free</p>
     <p>created by Meredith, Rowa, and Ananya</p>
   </div>
