--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,13 +17,17 @@
   <br>
   <div>
     <p class="button"><a href="/quiz" >quiz</a></p>
-    <p class="button"><a href="/resources">resources</a></p>
+    <p class="button"><a href="/resources">about</a></p>
   </div>
 
 <div>
   <div>
     <div>
-      <center><h1 id="homepagename">eat.safe</h1></center>
+      <center>
+        <div id="header_out">
+          <h1 id="header_eat">eat.safe</h1>
+        </div>
+      </center>
     </div>
     
   <!--  <div id="alert">-->
@@ -42,8 +46,10 @@
   <br>
   
   <div class="boxone">
-    <p>enjoy chicago's food, allergen and worry free</p>
-    <p>created by Meredith, Rowa, and Ananya</p>
+    <br>
+    <br>
+    <p> &ensp;enjoy chicago's food, allergen and worry free</p>
+    <p> &ensp;created by Meredith, Rowa, and Ananya</p>
   </div>
 </div>
    
