--- a/public/style.css
+++ b/public/style.css
@@ -7,11 +7,71 @@
   text-align: center;
 }
 
-#homepagename {
+#header_out{
+  /*border: 5px solid red;*/
+  /*background-color: purple;*/
+}
+
+#header_eat {
+  background-color: gray;
   text-align: center;
   font-size: 80px;
   color: black;
+  background-color: white;
+  width: 500px;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 0 0 0;
 }
+
+html {
+ background: url("https://images.pexels.com/photos/326278/pexels-photo-326278.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center center fixed;
+ -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
+ background-size: cover;
+}
+
+.button {
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  font-family: "sans serif";
+  width: 500px;
+  height: 100px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 100px;
+  border-radius: 20px;
+}
+
+#about {
+ color: white;
+ font-family: "trebuchet ms";
+ }
+
+#mission {
+  color: white;
+  font-family: "trebuchet ms";
+}
+
+
+
+
+/*#homepagename:after {*/
+/*  content: dotted 5px black;*/
+/*  text-align: center;*/
+/*  font-size: 80px;*/
+/*  color: black;*/
+/*  background-color: black;*/
+/*  border: blue;*/
+/*  width: 500px;*/
+/*  border-radius: 5px;*/
+  /*padding: 10px;*/
+/*}*/
+
+
+
 .button {
   background-color: black;
   border: none;
@@ -23,6 +83,7 @@
   text-align: center;
   font-size: 25px;
   line-height: 80px;
+  border-radius: 5px;
 }
 
 .quiz {
@@ -74,7 +135,8 @@ alert {
   font-weight: bold;
   width: 500px;
   height: 70px;
-  text-align: center;
+  /*text-align: center;*/
   font-size: 15px;
-  line-height: 20px;
+  line-height: 9px;
+  border-radius: 5px;
 }
