--- a/app/views/resources.erb
+++ b/app/views/resources.erb
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
+
+<html>
+  <header>
+    <link rel="stylesheet" type="text/css" href="styles/index.processed.css">
+  </header>
+<STYLE>A {text-decoration: none;} </STYLE>
+
 <body>
-    <a href=https://www.epipen.ca/en/about-epipen/how-to-use class="button"> <button>How to use an Epipen</button> </a>
-    <a href=https://www.foodallergy.org/life-with-food-allergies/food-allergy-101 class="button"> <button>Food Allergy 101</button> </a>
-    <a href=https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food 
-class="button"> <button>Treating Allergic Reactions</button> </a>
-    <a href='/' class="button"> <button>Home</button> </a>
+    
 
+  <a class="button" href="https://www.epipen.ca/en/about-epipen/how-to-use">How to use an Epipen</a>
+  <br>
+  <a class="button" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">Food Allergies 101</a>
+  <br>
+  <a class="button" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">Treating Allergic Reactions</a>
+  <br>
+  <br>
+  <br>
 
-
-    <h3>Our Mission</h3>
-    <br>
-    <p>Eat.safe Chicago set out to solve a simple problem – how can food-allergic and food-intolerant diners quickly and easily find restaurants that will properly accommodate their individual dietary needs? Our goal is to give people with food allergies opportunities to enjoy a delicious meal out without having to worry about having an allergic reaction and feeling restricted to certain options.</p>
-
-    <h3>About Us</h3>
-    <br>
-    <p>This app was created by Meredith, Ananya, and Rowa in partnership with Kode with Klossy 2018.</p>
-  </body>
+  <h1 id="about">About the Creators</h1>
+  
+ 
+  <h3 id=about>This app was created by Meredith, Ananya, and Rowa through Kode with Klossy 2018 Chicago camp.</h3>
+   <br>
+  <h1 id="mission">Our Mission</p>
+  
+  <h3 id=mission>Eat.safe Chicago set out to solve a simple problem: how can food-allergic and food-intolerant diners quickly and easily find restaurants that will properly accommodate their individual dietary needs? Our goal is to give people with food allergies opportunities to enjoy a delicious meal out without having to worry about having an allergic reaction and feeling restricted to certain options.</h3>
+</html>
