--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Eat Safe Chicago</title>
+<title>eat.safe</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -12,6 +12,8 @@
 
 
 <body class="background" background="https://wallpapershome.com/images/wallpapers/texture-4500x3000-4k-5k-wallpaper-8k-wood-background-6199.jpg">
+
+<body class="background-index">
   
   <br>
   <br>
@@ -24,23 +26,20 @@
   <div>
     <div>
       <center>
-        <div id="header_out">
-          <h1 id="header_eat">eat.safe</h1>
-        </div>
+          <h1 class="homepagename">eat.safe</h1>
       </center>
-    </div>
-    
-  <!--  <div id="alert">-->
-  <!--   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> -->
-  <!--Click here to take our quiz!-->
-  <!--    <a href='/quiz.erb' class="button"> <button class="quizbutton">Quiz</button> </a>-->
-  <!--  </div>-->
+  <br>
+  <br>
+  <div class="popupbox black">Click here to take our quiz!<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+    <br>
+    <br>
+    <a href='/quiz' class="button"> <button class="quizbuttontwo">Quiz</button> </a>
+  </div>
 
-    </div>
+
   <br><br><br>
   
 
-  <br>
   <br>
   <br>
   <br>
