--- a/app/views/quiz.erb
+++ b/app/views/quiz.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Allergy Restaurant Guide</title>
+        <title>eat.safe Quiz</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
         <link rel="stylesheet"type="text/css"href="/style.css">
     </head>
     
