--- a/app/views/resources.erb
+++ b/app/views/resources.erb
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 
-<html>
+<html id="resource">
   <header>
-    <link rel="stylesheet" type="text/css" href="styles/index.processed.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+    <title>eat.safe about</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   </header>
 <STYLE>A {text-decoration: none;} </STYLE>
 
-<body>
+<body class="background" background="https://wallpapershome.com/images/wallpapers/texture-4500x3000-4k-5k-wallpaper-8k-wood-background-6199.jpg">
     
 
-  <a class="button" href="https://www.epipen.ca/en/about-epipen/how-to-use">How to use an Epipen</a>
+  <a class="buttontwo" href="https://www.epipen.ca/en/about-epipen/how-to-use">how to use an Epipen</a>
   <br>
-  <a class="button" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">Food Allergies 101</a>
+  <a class="buttontwo" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">food allergies 101</a>
   <br>
-  <a class="button" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">Treating Allergic Reactions</a>
+  <a class="buttontwo" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">treating allergic reactions</a>
+  <br>
+  <a class="buttontwo" href='/'>home</a>
   <br>
   <br>
   <br>
-
+  <div class="boxfour">
+  <h1 id="mission">Our Mission</p>
+  
+  <h3 id=mission>eat.safe Chicago set out to solve a simple problem: how can food-allergic and food-intolerant diners quickly and easily find restaurants that will properly accommodate their individual dietary needs? Our goal is to give people with food allergies opportunities to enjoy a delicious meal out without having to worry about having an allergic reaction and feeling restricted to certain options.</h3>
+  
+  </div>
+  <br>
+  
+  <div class="boxthree">
   <h1 id="about">About the Creators</h1>
   
  
   <h3 id=about>This app was created by Meredith, Ananya, and Rowa through Kode with Klossy 2018 Chicago camp.</h3>
-   <br>
-  <h1 id="mission">Our Mission</p>
-  
-  <h3 id=mission>Eat.safe Chicago set out to solve a simple problem: how can food-allergic and food-intolerant diners quickly and easily find restaurants that will properly accommodate their individual dietary needs? Our goal is to give people with food allergies opportunities to enjoy a delicious meal out without having to worry about having an allergic reaction and feeling restricted to certain options.</h3>
+  </div>
 </html>
