--- a/app/views/resources.erb
+++ b/app/views/resources.erb
@@ -23,6 +23,7 @@
   <br>
   <a class="buttontwo" href='/'>home</a>
   <br>
+  <img class="imageabout" src="https://revitalife.net/wp-content/uploads/Food-Allergies-768x607.png">
   <br>
   <br>
   <div class="boxfour">
