--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -35,6 +35,101 @@
     <br>
     <a href='/quiz' class="button"> <button class="quizbuttontwo">Quiz</button> </a>
   </div>
+  <div>
+    <!DOCTYPE html>
+<!--<link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">-->
+<!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">-->
+<html>
+ 
+ <head>
+  <!--<meta charset="UTF-8">-->
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  
+  <title> Doggie Dog World </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+<link href "https://www.1001fonts.com/puppybellies-font.html" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+   
+   
+  <title>Carousel</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ </head>
+ <div class= "back">
+ <body>
+  <hr class= "line">
+    <p style="font-family: 'Montserrat', sans-serif; color: white; font-size: 50px; text-align: center; margin-top: 0%;">GALLERY</p>
+  
+  <hr class= "line">
+  
+  <div class="container" style="margin-top: 0.5%; padding-left:0.5%; padding-right: 0.5%; width: 100%;">
+ <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+   <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+   <li data-target="#myCarousel" data-slide-to="1"></li>
+   <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+   <div class="item active">
+   <center> <img src="https://img.grouponcdn.com/deal/fzzL46U2havpL93dZr1ro8Hg4rB/fz-700x420/v1/c700x420.jpg" alt="FigOlive" style="height: 70%;" style=align: middle> </center>
+       <div class="carousel-caption"> 
+    <p style="font-size: 30px; margin-bottom:4%; font-family: 'Montserrat', cursive; color: black ">Fig and Olive flatbreads (nut-free)</p>
+   </div>
+ 
+   </div>
+   
+   <div class="item">
+    <center> <img src="http://www.trbimg.com/img-57336182/turbine/ct-aloha-poke-jpg-20160511" alt="poke" style="width: 50%"> </center>
+   <div class="carousel-caption"> 
+    <p style="font-size:30px; margin-bottom:5%; font-family: 'Montserrat', cursive; color: white ">Aloha Poke bowl (vegan and nut-free)</p>
+   </div>
+   </div>
+    
+    <div class="item">
+    <center> <img src="https://assets.dnainfo.com/photo/2017/5/1495131404-299383/extralarge.jpg" alt="falafel" style="width:80%;"> </center>
+   <div class="carousel-caption">
+    <p style="font-size:30px; margin-bottom:5%; font-family: 'Montserrat', cursive; style="width: 40%" " >I Dream of Falafel falafel sandwich (nut and gluten free, vegan)</p>
+   </div>
+   </div>
+    
+    <div class="item">
+    <center> <img src="https://media2.fdncms.com/chicago/imager/u/zoom/22331474/fnd-review_duck-duck-goat-1200.jpg" alt="duckduckgoat" style="width:80%;"> </center>
+   <div class="carousel-caption"> 
+    <p style="font-size:30px; margin-bottom:5%; font-family: 'Montserrat', cursive; style="width: 70%"">Duck Duck Goat dumplings and stir fry (nut-free)</p>
+   </div>
+   </div>
+  
+   <div class="item">
+   <center> <img src="https://fortunedotcom.files.wordpress.com/2015/02/flatbreads.jpg" alt="LYFE" style="width:80%;"> </center>
+       <div class="carousel-caption">
+    <p style="font-size:30px; margin-bottom:4%; font-family: 'Montserrat', cursive; color: black ">LYFE Kitchen pizzas (gluten and nut free)</p>
+   </div>
+   </div>
+  </div>
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+   <span class="glyphicon glyphicon-chevron-left"></span>
+   <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+   <span class="glyphicon glyphicon-chevron-right"></span>
+   <span class="sr-only">Next</span>
+  </a>
+ </div>
+</div>
+
+  
+  <br>
+
+  </div>
 
 
   <br><br><br>
