--- a/app/views/resources.erb
+++ b/app/views/resources.erb
@@ -23,7 +23,9 @@
   <br>
   <a class="buttontwo" href='/'>home</a>
   <br>
-  <img class="imageabout" src="https://revitalife.net/wp-content/uploads/Food-Allergies-768x607.png">
+  
+  <a id="theimage" data-flickr-embed="true"  href="https://www.flickr.com/photos/156080062@N06/30226944478/in/dateposted-public/" title="Picture"><img src="https://farm2.staticflickr.com/1820/30226944478_d4cbec726b_k.jpg" width="350" height="175" alt="Picture"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+  
   <br>
   <br>
   <br>
@@ -41,6 +43,7 @@
   <h1 id="about">About the Creators</h1>
   
  
-  <h3 id=about>This app was created by Meredith, Ananya, and Rowa through Kode with Klossy 2018 Chicago camp.</h3>
+  <p id=about>This app was created by Meredith, Ananya, and Rowa through Kode with Klossy 2018 Chicago camp. They are all high schoolers from the Chicagoland area. Meredith has a severe peanut allergy, so combined with their passions for food, they teamed up to create a website that lets people with all kinds of allergies enjoy the great food Chicago has to offer.</p>
+  <br>
   </div>
 </html>
