--- a/app/views/resources.erb
+++ b/app/views/resources.erb
@@ -22,10 +22,8 @@
   <a class="buttontwo" href="https://www.foodallergy.org/life-with-food-allergies/newly-diagnosed/treating-allergic-reactions-to-food">treating allergic reactions</a>
   <br>
   <a class="buttontwo" href='/'>home</a>
+  <img src="https://revitalife.net/wp-content/uploads/Food-Allergies-768x607.png" class="imageabout">
   <br>
-  
-  <a id="theimage" data-flickr-embed="true"  href="https://www.flickr.com/photos/156080062@N06/30226944478/in/dateposted-public/" title="Picture"><img src="https://farm2.staticflickr.com/1820/30226944478_d4cbec726b_k.jpg" width="350" height="175" alt="Picture"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-  
   <br>
   <br>
   <br>
@@ -38,6 +36,8 @@
   <h3 id=mission>eat.safe Chicago set out to solve a simple problem: how can food-allergic and food-intolerant diners quickly and easily find restaurants that will properly accommodate their individual dietary needs? Our goal is to give people with food allergies opportunities to enjoy a delicious meal out without having to worry about having an allergic reaction and feeling restricted to certain options.</h3>
   
   </div>
+  
+  <a id="theimage" data-flickr-embed="true"  href="https://www.flickr.com/photos/156080062@N06/30226944478/in/dateposted-public/" title="Picture"><img src="https://farm2.staticflickr.com/1820/30226944478_d4cbec726b_k.jpg" width="350" height="175" alt="Picture"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
   
   <div class="boxthree">
   <h1 id="about">About the Creators</h1>
